--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@observablehq/plot": "^0.6.14",
 		"@prisma/client": "5.13.0",
 		"@svelte-add/tailwindcss": "^1.0.5",
+		"@sveltejs/adapter-vercel": "^5.4.1",
 		"@tabler/icons-svelte": "^3.5.0",
 		"@types/lodash": "^4.17.1",
 		"@types/lodash-es": "^4.17.12",
